--- a/afat/templates/afat/partials/dashboard/tabs/fats.html
+++ b/afat/templates/afat/partials/dashboard/tabs/fats.html
@@ -43,7 +43,13 @@
                                     </tr>
                                 </thead>
 
-                                <tbody></tbody>
+                                <tbody>
+                                    <tr>
+                                        <td colspan="6" class="text-center">
+                                            {% include "afat/partials/common/spinner.html" %}
+                                        </td>
+                                    </tr>
+                                </tbody>
 
                                 <tfoot>
                                     <tr>
