--- a/afat/templates/afat/partials/dashboard/tabs/fatlinks.html
+++ b/afat/templates/afat/partials/dashboard/tabs/fatlinks.html
@@ -22,7 +22,13 @@
                 </tr>
             </thead>
 
-            <tbody></tbody>
+            <tbody>
+                <tr>
+                    <td colspan="{% if perms.afat.add_fatlink or perms.afat.manage_afat %}6{% else %}5{% endif %}" class="text-center">
+                        {% include "afat/partials/common/spinner.html" %}
+                    </td>
+                </tr>
+            </tbody>
 
             <tfoot>
                 <tr>
