--- a/afat/templates/afat/partials/fatlinks/details/tabs/fats.html
+++ b/afat/templates/afat/partials/fatlinks/details/tabs/fats.html
@@ -22,7 +22,13 @@
                         </tr>
                     </thead>
 
-                    <tbody></tbody>
+                    <tbody>
+                        <tr>
+                            <td colspan="4" class="text-center">
+                                {% include "afat/partials/common/spinner.html" %}
+                            </td>
+                        </tr>
+                    </tbody>
                 </table>
             </div>
 
@@ -41,7 +47,13 @@
                         </tr>
                     </thead>
 
-                    <tbody></tbody>
+                    <tbody>
+                        <tr>
+                            <td colspan="2" class="text-center">
+                                {% include "afat/partials/common/spinner.html" %}
+                            </td>
+                        </tr>
+                    </tbody>
                 </table>
             </div>
         </div>
