--- a/afat/templates/afat/view/fatlinks/fatlinks-overview.html
+++ b/afat/templates/afat/view/fatlinks/fatlinks-overview.html
@@ -38,7 +38,13 @@
                     </tr>
                 </thead>
 
-                <tbody></tbody>
+                <tbody>
+                    <tr>
+                        <td colspan="{% if perms.afat.add_fatlink or perms.afat.manage_afat %}7{% else %}6{% endif %}" class="text-center">
+                            {% include "afat/partials/common/spinner.html" %}
+                        </td>
+                    </tr>
+                </tbody>
 
                 <tfoot>
                     <tr>
