[CHANGE] Switch to DataTables 2

--- a/afat/templates/afat/partials/common/navigation/month-navigation.html
+++ b/afat/templates/afat/partials/common/navigation/month-navigation.html
@@ -6,7 +6,7 @@
         class="btn btn-primary btn-sm"
         href="{{ url_previous_month }}"
         title="{% translate 'Previous month' %}"
-        data-bs-toggle="tooltip"
+        data-bs-tooltip="afat"
     >
         <i class="fa-solid fa-backward"></i>
     </a>
@@ -20,7 +20,7 @@
             class="btn btn-primary btn-sm"
             href="{{ url_next_month }}"
             title="{% translate 'Next month' %}"
-            data-bs-toggle="tooltip"
+            data-bs-tooltip="afat"
         >
             <i class="fa-solid fa-forward"></i>
         </a>
@@ -28,7 +28,7 @@
             class="btn btn-primary btn-sm"
             href="{{ url_current_month }}"
             title="{% translate 'Current month' %}"
-            data-bs-toggle="tooltip"
+            data-bs-tooltip="afat"
         >
             <i class="fa-solid fa-fast-forward"></i>
         </a>
