--- a/afat/templates/afat/partials/statistics/alliance/tabs/corporations.html
+++ b/afat/templates/afat/partials/statistics/alliance/tabs/corporations.html
@@ -28,7 +28,7 @@
                             <a
                                 class="btn btn-primary btn-sm"
                                 href="{% url 'afat:statistics_corporation' value.0 year month %}"
-                                data-bs-toggle="tooltip"
+                                data-bs-tooltip="afat"
                                 data-bs-html="true"
                                 data-bs-title="{% translate 'View detailed corporation statistics for: ' %}<br>{{ month|month_name }} {{ year }}"
                             >
