--- a/afat/templates/afat/partials/statistics/overview/tabs/alliance-accordion-item.html
+++ b/afat/templates/afat/partials/statistics/overview/tabs/alliance-accordion-item.html
@@ -22,7 +22,7 @@
             <a
                 class="btn btn-primary btn-sm position-absolute btn-alliance-statistics"
                 href="{% url 'afat:statistics_alliance' value.0 %}"
-                data-bs-toggle="tooltip"
+                data-bs-tooltip="afat"
                 data-bs-html="true"
                 data-bs-title="{% translate 'Alliance statistics for' %}:<br>{{ key }}"
                 style="top: 17px; right: 50px; z-index: 999;"
