--- a/afat/templates/afat/partials/statistics/overview/tabs/corp-list.html
+++ b/afat/templates/afat/partials/statistics/overview/tabs/corp-list.html
@@ -26,7 +26,7 @@
                                 <a
                                     class="btn btn-primary btn-sm"
                                     href="{% url 'afat:statistics_corporation' corp.0 %}"
-                                    data-bs-toggle="tooltip"
+                                    data-bs-tooltip="afat"
                                     data-bs-html="true"
                                     data-bs-title="{% translate 'Corporation statistics for' %}:<br>{{ corp.1 }}"
                                 >
