--- a/afat/static/afat/css/afat.css
+++ b/afat/static/afat/css/afat.css
@@ -65,3 +65,19 @@
         height: 2.5rem;
     }
 }
+
+/* DataTables
+------------------------------------------------------------------------------------- */
+@media all {
+    /* DataTables ColumnControl
+    --------------------------------------------------------------------------------- */
+    table.dataTable span.dtcc div.dtcc-search>div select {
+        background-color: var(--bs-body-bg);
+        color: var(--bs-body-color);
+        padding: 0.375rem;
+    }
+
+    table.dataTable .dt-column-header div.dtcc-search-title {
+        display: none;
+    }
+}
