--- a/afat/templates/afat/base.html
+++ b/afat/templates/afat/base.html
@@ -30,9 +30,42 @@
                 const afatJsSettingsDefaults = {
                     datetimeFormat: 'YYYY-MMM-DD, HH:mm',
                     language: '{{ LANGUAGE_CODE }}',
-                    dataTable: {
+                    dataTables: {
                         paging: true,
                         language: {url: '{{ DT_LANG_PATH }}'},
+                        layout: {
+                            topStart: 'pageLength',
+                            topEnd: null, // Removing the default search bar (Default is 'search', see https://datatables.net/reference/option/layout#Default)
+                            bottomStart: 'info',
+                            bottomEnd: 'paging'
+                        },
+                        ordering: {
+                            indicators: false,
+                            handler: false
+                        },
+                        columnControl: [
+                            {
+                                target: 0,
+                                content: [
+                                    'order',
+                                    // [
+                                    //     'orderAsc',
+                                    //     'orderDesc',
+                                    //     'spacer',
+                                    //     'orderAddAsc',
+                                    //     'orderAddDesc',
+                                    //     'spacer',
+                                    //     'orderRemove'
+                                    // ]
+                                ]
+                            },
+                            {
+                                target: 1,
+                                content: [
+                                    'search'
+                                ]
+                            }
+                        ]
                     }
                 };
             </script>
@@ -50,9 +83,13 @@
     </div>
 {% endblock %}
 
-{% block extra_script %}
-    (() => {
-        const tooltipTriggerList = document.querySelectorAll('[data-bs-toggle="tooltip"]');
-        const tooltipList = [...tooltipTriggerList].map(tooltipTriggerEl => new bootstrap.Tooltip(tooltipTriggerEl));
-    })();
-{% endblock extra_script %}
+{% block extra_javascript %}
+    {% include "afat/bundles/afat-js.html" %}
+
+    <script>
+        $(document).ready(() => {
+            // Initialize AFAT Tooltips
+            _afatBootstrapTooltip({namespace: 'afat'});
+        });
+    </script>
+{% endblock extra_javascript %}
