--- a/afat/templates/afat/partials/common/navigation/year-navigation.html
+++ b/afat/templates/afat/partials/common/navigation/year-navigation.html
@@ -5,7 +5,7 @@
         class="btn btn-primary btn-sm"
         href="{{ url_previous_year }}"
         title="{% translate 'Previous year' %}"
-        data-bs-toggle="tooltip"
+        data-bs-tooltip="afat"
     >
         <i class="fa-solid fa-backward"></i>
     </a>
@@ -19,7 +19,7 @@
             class="btn btn-primary btn-sm"
             href="{{ url_next_year }}"
             title="{% translate 'Next year' %}"
-            data-bs-toggle="tooltip"
+            data-bs-tooltip="afat"
         >
             <i class="fa-solid fa-forward"></i>
         </a>
@@ -28,7 +28,7 @@
             class="btn btn-primary btn-sm"
             href="{{ url_current_year }}"
             title="{% translate 'Current year' %}"
-            data-bs-toggle="tooltip"
+            data-bs-tooltip="afat"
         >
             <i class="fa-solid fa-fast-forward"></i>
         </a>
