--- a/afat/templates/afat/partials/statistics/overview/tabs/mine.html
+++ b/afat/templates/afat/partials/statistics/overview/tabs/mine.html
@@ -88,7 +88,7 @@
                                                         <a
                                                             href="{% url 'afat:statistics_character' character.2 year month %}"
                                                             class="btn btn-primary btn-sm"
-                                                            data-bs-toggle="tooltip"
+                                                            data-bs-tooltip="afat"
                                                             data-bs-html="true"
                                                             data-bs-title="{% translate 'Statistics for' %}:<br>{{ character.0 }} ({{ month|month_name }} {{ year }})"
                                                         >
