--- a/afat/templates/afat/view/fatlinks/fatlinks-details-fatlink.html
+++ b/afat/templates/afat/view/fatlinks/fatlinks-details-fatlink.html
@@ -30,7 +30,7 @@
 {% endblock %}
 
 {% block extra_css %}
-    {% include "bundles/datatables-css-bs5.html" %}
+    {% include "afat/bundles/datatables-2-css.html" with extColumnControl=True %}
     {% include "afat/bundles/afat-css.html" %}
 {% endblock %}
 
@@ -56,8 +56,8 @@
         };
     </script>
 
+    {% include "afat/bundles/datatables-2-js.html" with extColumnControl=True %}
     {% include "afat/bundles/afat-js.html" %}
-    {% include "bundles/datatables-js-bs5.html" %}
     {% include "bundles/clipboard-js.html" %}
     {% include "afat/bundles/afat-fatlink-details-js.html" %}
 {% endblock %}
