--- a/afat/templates/afat/view/statistics/statistics-alliance-year-overview.html
+++ b/afat/templates/afat/view/statistics/statistics-alliance-year-overview.html
@@ -51,7 +51,7 @@
                                     <a
                                         href="{% url 'afat:statistics_alliance' allianceid year month.0 %}"
                                         class="btn btn-primary btn-sm"
-                                        data-bs-toggle="tooltip"
+                                        data-bs-tooltip="afat"
                                         data-bs-html="true"
                                         data-bs-title="{% translate 'View detailed alliance statistics for: ' %}<br>{{ month.0|month_name }} {{ year }}"
                                     >
