--- a/afat/templates/afat/view/statistics/statistics-overview.html
+++ b/afat/templates/afat/view/statistics/statistics-overview.html
@@ -34,3 +34,7 @@
 {% block extra_css %}
     {% include "afat/bundles/afat-css.html" %}
 {% endblock %}
+
+{% block extra_javascript %}
+    {% include "afat/bundles/afat-js.html" %}
+{% endblock %}
