[CHANGE] Refactor of `views.fatlinks.details_fatlink`

--- a/afat/templates/afat/partials/fatlinks/details/tabs/manualfat.html
+++ b/afat/templates/afat/partials/fatlinks/details/tabs/manualfat.html
@@ -13,7 +13,7 @@
                 <strong>{% translate "Note" %}:</strong> {% translate "This action is logged!" %}
             </p>
 
-            <form class="form" role="form" action="" method="POST">
+            <form class="form" role="form" action="{% url 'afat:fatlinks_process_manual_fat' link.hash %}" method="POST">
                 {% csrf_token %}
                 <div class="form-group">
                     <div class="row">
