--- a/afat/templates/afat/partials/fatlinks/details/fatlink-name-form.html
+++ b/afat/templates/afat/partials/fatlinks/details/fatlink-name-form.html
@@ -2,7 +2,7 @@
 
 <div class="col-md-12">
     <div class="row">
-        <form class="form mb-3" role="form" action="" method="POST">
+        <form class="form mb-3" role="form" action="{% url 'afat:fatlinks_process_fatlink_name_change' link.hash %}" method="POST">
             {% csrf_token %}
 
             <div class="row">
