--- a/afat/templates/afat/view/fatlinks/fatlinks-add-fatlink.html
+++ b/afat/templates/afat/view/fatlinks/fatlinks-add-fatlink.html
@@ -36,7 +36,7 @@
         $(document).ready(() => {
             const cancelEsiFleetModal = $('#cancelEsiFleetModal');
 
-            manageModal(cancelEsiFleetModal);
+            _manageModal(cancelEsiFleetModal);
         });
     </script>
 {% endblock %}
