[CHANGE] Use serverside DataTables feature provided by AA framework

--- a/afat/templates/afat/partials/fatlinks/open-esi-fleets.html
+++ b/afat/templates/afat/partials/fatlinks/open-esi-fleets.html
@@ -29,9 +29,10 @@
                     <div>
                         <button
                             class="btn btn-primary btn-sm ms-1"
-                            title="{% translate 'Clicking here will stop the automatic tracking through ESI for this fleet and close the associated FAT link.' %}"
+                            title="{% translate 'Stop automatic tracking through ESI for this fleet and close the associated FAT link.' %}"
                             data-bs-toggle="modal"
                             data-bs-target="#cancelEsiFleetModal"
+                            data-bs-tooltip="afat"
                             data-url="{% url 'afat:fatlinks_close_esi_fatlink' open_esi_fleet.hash %}?next={% url 'afat:fatlinks_add_fatlink' %}"
                             data-body-text="{% blocktranslate with esi_fleet_id=open_esi_fleet.esi_fleet_id character_name=open_esi_fleet.character.character_name %}<p>Are you sure you want to close ESI fleet with ID {{ esi_fleet_id }} from {{ character_name }}</p>{% endblocktranslate %}"
                             data-confirm-text="{% translate 'Stop tracking' %}"
