--- a/afat/static/afat/css/afat.css
+++ b/afat/static/afat/css/afat.css
@@ -66,18 +66,28 @@
     }
 }
 
-/* DataTables
+/* DataTables 2
 ------------------------------------------------------------------------------------- */
 @media all {
     /* DataTables ColumnControl
     --------------------------------------------------------------------------------- */
-    table.dataTable span.dtcc div.dtcc-search>div select {
+    table.dataTable span.dtcc div.dtcc-search > div select {
         background-color: var(--bs-body-bg);
         color: var(--bs-body-color);
         padding: 0.375rem;
     }
 
     table.dataTable .dt-column-header div.dtcc-search-title {
+        display: none;
+    }
+
+    /* DataTables Processing Indicator
+    --------------------------------------------------------------------------------- */
+    div.dt-processing {
+        padding-top: 0.5rem;
+    }
+
+    div.dt-processing > div {
         display: none;
     }
 }
