--- a/afat/templates/afat/base.html
+++ b/afat/templates/afat/base.html
@@ -28,20 +28,20 @@
 
             <script>
                 const afatJsSettingsDefaults = {
-                    datetimeFormat: 'YYYY-MMM-DD, HH:mm',
+                    datetimeFormat: 'YYYY-MM-DD, HH:mm',
                     language: '{{ LANGUAGE_CODE }}',
                     dataTables: {
                         paging: true,
                         language: {url: '{{ DT_LANG_PATH }}'},
-                        layout: {
+                        layout: { // see https://datatables.net/reference/option/layout
                             topStart: 'pageLength',
-                            topEnd: null, // Removing the default search bar (Default is 'search', see https://datatables.net/reference/option/layout#Default)
+                            topEnd: 'search',
                             bottomStart: 'info',
                             bottomEnd: 'paging'
                         },
-                        ordering: {
-                            indicators: false,
-                            handler: false
+                        ordering: { // https://datatables.net/reference/option/ordering
+                            handler: true, // Enable ordering by clicking on column headers
+                            indicators: false, // Disable ordering indicators on column headers so ColumnControl can manage them
                         },
                         columnControl: [
                             {
