--- a/afat/templates/afat/view/fatlinks/fatlinks-details-fatlink.html
+++ b/afat/templates/afat/view/fatlinks/fatlinks-details-fatlink.html
@@ -30,7 +30,8 @@
 {% endblock %}
 
 {% block extra_css %}
-    {% include "afat/bundles/datatables-2-css.html" with extColumnControl=True %}
+    {% include "bundles/datatables-2-css-bs5.html" %}
+    {% include "bundles/datatables-2-columncontrol-css-bs5.html" %}
     {% include "afat/bundles/afat-css.html" %}
 {% endblock %}
 
@@ -56,7 +57,8 @@
         };
     </script>
 
-    {% include "afat/bundles/datatables-2-js.html" with extColumnControl=True %}
+    {% include "bundles/datatables-2-js-bs5.html" %}
+    {% include "bundles/datatables-2-columncontrol-js-bs5.html" %}
     {% include "afat/bundles/afat-js.html" %}
     {% include "bundles/clipboard-js.html" %}
     {% include "afat/bundles/afat-fatlink-details-js.html" %}
